--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "negotiator": "^0.6.3",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
