--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "negotiator": "^0.6.3",
     "next": "14.2.4",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8"
